--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,7 @@
 [data-theme="dark"] .editable-row:hover .editable-cell-value-wrap {
   border: 1px solid #434343;
 }
+
+div.ant-input-number-handler-wrap {
+  display: none;
+}
