--- a/src/App.css
+++ b/src/App.css
@@ -73,4 +73,5 @@ div.ant-table-container > div > table > tbody > tr > td {
   /* padding: 2px 2px 2px 2px; */
   padding-top: 2px;
   padding-bottom: 2px;
+  color: black;
 }
