--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@
   width: 100%;
 }
 
+.mg-bottom-0 {
+  margin-bottom: 0px !important;
+}
+
 .full-width-upload > .ant-upload-select.ant-upload-select-text {
   width: 100%;
 }
